--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "clean": "rm -rf .next node_modules"
   },
   "dependencies": {
-    "@consensys/ds3": "workspace:*",
-    "@consensys/ds3-config": "workspace:*",
-    "@consensys/ds3-theme": "workspace:*",
+    "@consensys/ds3": "0.0.5",
+    "@consensys/ds3-config": "0.0.4",
+    "@consensys/ds3-theme": "0.0.4",
     "next": "14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,5 +26,6 @@
     "@types/react-dom": "^18.3.1",
     "postcss": "^8",
     "typescript": "^5.8.3"
-  }
+  },
+  "packageManager": "pnpm@9.14.3+sha512.c0f53ee99477ed969b82b289ad011a5d16bf1623c957e7f29eabe8d0c00b574c29b8c7f54f6c67ee710c73f285c8154d07ce44b46fe2c0eeb476a90441bac371"
 }
