--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "clean": "rm -rf .next node_modules"
   },
   "dependencies": {
-    "@consensys/ds3": "0.0.5",
-    "@consensys/ds3-config": "0.0.4",
-    "@consensys/ds3-theme": "0.0.4",
+    "@consensys/ds3": "workspace:*",
+    "@consensys/ds3-config": "workspace:*",
+    "@consensys/ds3-theme": "workspace:*",
     "next": "14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
